--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,15 +11,19 @@
   </nb-layout-column>
 
   <nb-layout-column>
-  <nb-card size="small">
-          <nb-card-body >
+
+
                 <!-- this creates a google map on the page with the given lat/lng from -->
                   <!-- the component as the initial center of the map: -->
         <agm-map [latitude]="lat" [longitude]="lng">
         <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
         </agm-map>
-    </nb-card-body>
-  </nb-card>
-  <app-sidebar></app-sidebar>
+
+
+  <!--
+    Stepper
+       <app-sidebar></app-sidebar>
+  -->
+
   </nb-layout-column>
 </nb-layout>
