--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nb-layout>
 
   <nb-layout-header size="small">
-      <h5>School Bus Tracking </h5>
+      <h5 class="title">School Bus Tracking </h5>
       <app-parent></app-parent>
   </nb-layout-header>
 
