--- a/src/app/parents/eleves/eleves.component.scss
+++ b/src/app/parents/eleves/eleves.component.scss
@@ -24,6 +24,8 @@
 @media screen and  (max-width: 768px) {
 
   .vehicule{
-    width: 23vw;
+   size: small;
+   padding-bottom: 0;
+   padding-top: 0;
   }
 }
