--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,9 +15,9 @@ agm-map {
 }
 
 
-@media screen and (max-width: 768PX){
+@media screen and (max-width: 768px){
   nb-layout-header{
-    display: inline;
+    size: 10px;
   }
   h5 .title {
     width: 5px;
