--- a/src/app/parents/vehicules/vehicules.component.html
+++ b/src/app/parents/vehicules/vehicules.component.html
@@ -7,10 +7,22 @@
 </nb-card>
 -->
 
+     <div class="container"> 
+      <agm-map 
+       [latitude]='lat' 
+       [longitude]='long'
+       [zoom]='zoom'
+       > 
+        <agm-marker   markerClick=toggleDisplayDiv() 
+            *ngFor="let marker of markers" 
+            [latitude]="marker.lat" 
+              [longitude]="marker.lng" >    
+                      <agm-info-window #infoWindow>
+                      Nom:   {{ marker.label }}
+                      Lat:  {{ marker.lat }}
+                      Lng: {{ marker.lng }}
+                </agm-info-window> 
 
-<nb-card>
-  <nb-card-header>Google Maps</nb-card-header>
-  <nb-card-body>
-
-  </nb-card-body>
-</nb-card>
+        </agm-marker>  
+      </agm-map>   
+</div>
