--- a/src/app/parents/eleves/eleves.component.html
+++ b/src/app/parents/eleves/eleves.component.html
@@ -10,9 +10,8 @@
     </nb-card>
 -->
      <nb-card size="large">
-
       <nb-card-header> Détails de la  véhicule</nb-card-header>
-    <div class="vehicule" >              
+    <div class="vehicule" ng-if="markers">              
       <nb-list *ngFor="let marker of markers">
         <nb-list-item  > Nom:   {{ marker.label }} </nb-list-item>
         <nb-list-item> Lat:  {{ marker.lat }}</nb-list-item>
