--- a/src/app/parents/eleves/eleves.component.html
+++ b/src/app/parents/eleves/eleves.component.html
@@ -8,18 +8,18 @@
         </nb-list-item>
       </nb-list>
     </nb-card>
+     ng-if="markers"
 -->
-     <nb-card size="large">
-      <nb-card-header> Détails de la  véhicule</nb-card-header>
-    <div class="vehicule" ng-if="markers">              
+  <nb-card size="small">
+      <nb-card-header> Liste des véhicule</nb-card-header>
+    <div class="vehicule">              
       <nb-list *ngFor="let marker of markers">
-        <nb-list-item  > Nom:   {{ marker.label }} </nb-list-item>
-        <nb-list-item> Lat:  {{ marker.lat }}</nb-list-item>
-        <nb-list-item>  Lng: {{ marker.lng }}</nb-list-item>
+        <nb-list-item  > Nom:   {{ marker.ecole }} </nb-list-item>
       </nb-list>
     </div>
   </nb-card>
 </div>
+
 
 
 <!--<div class="card-row">
