--- a/src/app/parents/parent/parent.component.html
+++ b/src/app/parents/parent/parent.component.html
@@ -10,7 +10,7 @@
               </nb-action>
       <nb-action icon="home-outline"></nb-action>
       <nb-action icon="power-outline"></nb-action>
-      <nb-action [icon]="disabledIconConfig" disabled></nb-action>
+      <nb-action [icon]="disabledIconConfig" disabled> Bruno Mars</nb-action>
     </nb-actions>
 </div>
 
